# PyBinPatch

./: .gitignore  TODO.txt  pyproject.toml  tool
binpatch/: __main__.py  diff.py  errors.py  file.py  find.py  io.py  patch.py  types.py  utils.py
