[tool.poetry]
name = "binpatch"
version = "1.0"
description = "Binary diff/patch library"
authors = ["Merculous <24739823+Merculous@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
